[package]
name = "braincooker"
version = "0.2.0"
edition = "2024"
description = "A Brainfuck interpreter, and compiler written in Rust"
authors = ["SQD.exe"]
repository = "https://github.com/SQDexe/braincooker"
readme = "README.md"
license = "Unlicense"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.49", features = ["derive"] }
min_max_traits = "0.1.0"
num-traits = "0.2.19"
thiserror = "2.0.17"

[build-dependencies]
winresource = "0.1.23"
